# delineator

./: .gitignore  README.md  outlets.csv  pyproject.toml
py/: merit_detailed.py  util.py
upstream_delineator/: __init__.py  config.py  subbasins.py
upstream_delineator/delineator_utils/: consolidate.py  delineate.py  fast_dissolve.py  merit_detailed.py  plot_network.py  raster_plots.py  util.py
upstream_delineator/py/: consolidate.py  merit_detailed.py  plot_network.py  util.py
upstream_delineator/scripts/: subbasins.py
